Fix nav covering sections

--- a/src/app.css
+++ b/src/app.css
@@ -20,6 +20,15 @@
   padding: 0;
 }
 
+html {
+  scroll-padding-top: 4rem;
+}
+
+body {
+  width: 70%;
+  margin: 0 auto;
+}
+
 h1 {
   font-size: 3rem;
 }
@@ -39,6 +48,7 @@ section {
   align-items: center;
   justify-content: center;
   text-align: center;
+  padding: 2.5rem 0 2.5rem 0;
 }
 
 @media only screen and (min-width: 640px) {
